[package]
name = "hellorust"
version = "0.1.0"
authors = ["Nate Cornell <nathandcornell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = "0.5.15"

[patch.'https://github.com/rust-lang/crates.io-index']
rltk = { git = 'https://github.com/felixalias/rltk_rs' }
